[SDESK-4127](fix): Export menu hidden behind table headers

--- a/client/charts/styles/charts.scss
+++ b/client/charts/styles/charts.scss
@@ -421,3 +421,7 @@ $colors: #7cb5ec #434348 #90ed7d #f7a35c #8085e9 #f15c80 #e4d354 #2b908f #f45b5b
     stroke: $navy;
     background-color: $navy !important;
 }
+
+.sda-chart__dropdown-menu {
+    margin-left: 4rem;
+}
